k8s/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ecommerce-backend
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: phanphan1504/ecommerce-backend:ed655e638b52f163c286d9a9fa9ea9e46612ec6c
          ports:
            - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: ecommerce-backend-active
      previewService: ecommerce-backend-preview
      autoPromotionEnabled: true
