k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx # Thay thế cho annotation cũ
  rules:
  - host: vshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-frontend-active
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: ecommerce-backend-active
            port:
              number: 8080
